<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Project4443_FlashCard</string>
    <string name="image_description">(image)</string>
    <string name="menu_title">Words</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_add">Add Card</string>
    <string name="quiz_question">Which word is this?</string>
    <string name="results_title">Result</string>
    <string name="correct_title">Correct!</string>
    <string name="incorrect_title">Sorry!</string>
    <string name="continue_string">Continue</string>
    <string name="try_again">Try again</string>
    <string name="correct_label">Correct:</string>
    <string name="incorrect_label">Incorrect:</string>
    <string name="complete_time_label">Complete time:</string>
    <string name="word">Word:</string>
    <string name="def">Definition:</string>
...
