<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <FrameLayout
        android:id="@+id/quiz_container2"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="3" />

    <FrameLayout
        android:id="@+id/quiz_container1"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="3" />

</LinearLayout>